cursor. fix isNull and notNull. fix date-type value issues.